==> EmbeddedRick/KIMp_CSHARK/LR211_driver/radio_hal/lr11xx_hal.c <==
/*!
 * \file      lr11xx_hal.c
 *
 * \brief     Implements the lr11xx radio HAL functions
 *
 * The Clear BSD License
 * Copyright Semtech Corporation 2021. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted (subject to the limitations in the disclaimer
 * below) provided that the following conditions are met:
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *     * Neither the name of the Semtech corporation nor the
 *       names of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written permission.
 *
 * NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY
 * THIS LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
 * CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT
 * NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
 * PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL SEMTECH CORPORATION BE
 * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 */

/*
 * -----------------------------------------------------------------------------
 * --- DEPENDENCIES ------------------------------------------------------------
 */

#include <stdint.h>   // C99 types
#include <stdbool.h>  // bool type

#include "lr11xx_hal.h"
#include "stm32l4xx_hal.h"
//#include "smtc_hal_gpio.h"
//#include "smtc_hal_spi.h"
//#include "smtc_hal_mcu.h"
#include "main.h"

//#include "modem_pinout.h"

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE MACROS-----------------------------------------------------------
 */

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE CONSTANTS -------------------------------------------------------
 */

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE TYPES -----------------------------------------------------------
 */

typedef enum
{
    RADIO_SLEEP,
    RADIO_AWAKE
} radio_mode_t;

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE VARIABLES -------------------------------------------------------
 */
extern SPI_HandleTypeDef hspi1;

static volatile radio_mode_t radio_mode = RADIO_AWAKE;

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE FUNCTIONS DECLARATION -------------------------------------------
 */

/**
 * @brief Wait until radio busy pin returns to 0
 */
void lr11xx_hal_wait_on_busy( const void* context );

/**
 * @brief Check if device is ready to receive spi transaction.
 * @remark If the device is in sleep mode, it will awake it and wait until it is ready
 */
void lr11xx_hal_check_device_ready( const void* context );

/*
 * -----------------------------------------------------------------------------
 * --- PUBLIC FUNCTIONS DEFINITION ---------------------------------------------
 */

/* Funciones modificadas:
 * - lr11xx_hal_write
 * - lr11xx_hal_read
 * - lr11xx_hal_direct_read
 * - lr11xx_hal_reset
 * - lr11xx_hal_reset
 * - lr11xx_hal_wakeup
 * - lr11xx_hal_check_device_ready
 * */

lr11xx_hal_status_t lr11xx_hal_write( const void* context, const uint8_t* command, const uint16_t command_length,
                                      const uint8_t* data, const uint16_t data_length )
{
	HAL_StatusTypeDef status = HAL_ERROR;
	
#if defined( USE_LR11XX_CRC_OVER_SPI )
    // First compute crc
    uint8_t cmd_crc = lr11xx_hal_compute_crc( 0xFF, command, command_length );
    cmd_crc         = lr11xx_hal_compute_crc( cmd_crc, data, data_length );
#endif

    lr11xx_hal_check_device_ready( context );
    const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    // Put NSS low to start spi transaction
	  HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
	  if(HAL_SPI_Transmit( ctx->hspi, ( uint8_t* ) command, command_length, 100 ) != HAL_OK)
		{
			return LR11XX_HAL_STATUS_ERROR;
		}	
	  if(data_length > 0)
		{
			if(HAL_SPI_Transmit(ctx->hspi, ( uint8_t* ) data, data_length, 100 ) != HAL_OK)
			{
				return LR11XX_HAL_STATUS_ERROR;
			}
		}

#if defined( USE_LR11XX_CRC_OVER_SPI )
    // Add crc byte at the end of the transaction
    hal_spi_in_out( RADIO_SPI_ID, cmd_crc );
#endif

    // Put NSS high as the spi transaction is finished
		HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );

    // LR11XX_SYSTEM_SET_SLEEP_OC=0x011B opcode. In sleep mode the radio busy line is held at 1 => do not test it
    if( ( command[0] == 0x01 ) && ( command[1] == 0x1B ) )
    {
        radio_mode = RADIO_SLEEP;

        // add a incompressible delay to prevent trying to wake the radio before it is full asleep
        HAL_Delay( 1 );
    }

    return LR11XX_HAL_STATUS_OK;
}

lr11xx_hal_status_t lr11xx_hal_read( const void* context, const uint8_t* command, const uint16_t command_length,
                                     uint8_t* data, const uint16_t data_length )
{
	  HAL_StatusTypeDef status = HAL_ERROR;
	  uint8_t              			  dummy_byte     = LR11XX_NOP;
    uint8_t                     dummy_byte_rx  = LR11XX_NOP;
	
#if defined( USE_LR11XX_CRC_OVER_SPI )
    // First compute crc
    uint8_t cmd_crc = lr11xx_hal_compute_crc( 0xFF, command, command_length );
#endif

    lr11xx_hal_check_device_ready( context );
    const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    // Put NSS low to start spi transaction
	  HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
	  if(HAL_SPI_Receive( ctx->hspi, ( uint8_t* ) command, command_length, 100 ) != HAL_OK)
		{
			return LR11XX_HAL_STATUS_ERROR;
		}

#if defined( USE_LR11XX_CRC_OVER_SPI )
    // Add crc byte at the end of the transaction
    hal_spi_in_out( RADIO_SPI_ID, cmd_crc );
#endif

    HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );
	
	  if(data_length > 0)
		{
			  lr11xx_hal_check_device_ready( context );
			  HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
        //HAL_SPI_Receive( &hspi1, data, data_length, 100 );
			  HAL_SPI_TransmitReceive( ctx->hspi, &dummy_byte_rx, &dummy_byte, 1, 100);
#if defined( USE_LR11XX_CRC_OVER_SPI )
        // save dummy for crc calculation
        const uint8_t dummy = hal_spi_in_out( RADIO_SPI_ID, 0 );
#else
       if(HAL_SPI_Receive( ctx->hspi, data, data_length, 100 ) != HAL_OK)
			 {
				 return LR11XX_HAL_STATUS_ERROR;
			 }
#endif
			
#if defined( USE_LR11XX_CRC_OVER_SPI )
        // read crc sent by lr11xx at the end of the transaction
        const uint8_t rx_crc = hal_spi_in_out( RADIO_SPI_ID, 0 );
#endif

        // Put NSS high as the spi transaction is finished
        HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );
#if defined( USE_LR11XX_CRC_OVER_SPI )
        // check crc value
        uint8_t computed_crc = lr11xx_hal_compute_crc( 0xFF, &dummy, 1 );
        computed_crc         = lr11xx_hal_compute_crc( computed_crc, data, data_length );
        if( rx_crc != computed_crc )
        {
            SMTC_HAL_TRACE_ERROR( "\x1B[0;31mERROR: lr11xx read function - error on received crc\n" );
            return LR11XX_HAL_STATUS_ERROR;
        }
#endif
				
		}
		
    return LR11XX_HAL_STATUS_OK;
}

lr11xx_hal_status_t lr11xx_hal_direct_read( const void* context, uint8_t* data, const uint16_t data_length )
{
	  HAL_StatusTypeDef status = HAL_ERROR;
    lr11xx_hal_check_device_ready(context );
    const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    // Put NSS low to start spi transaction
		HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
	
		status = HAL_SPI_Receive( ctx->hspi, data, data_length, 100 );

#if defined( USE_LR11XX_CRC_OVER_SPI )
    // read crc sent by lr11xx by sending one more NOP
    const uint8_t rx_crc = hal_spi_in_out( RADIO_SPI_ID, 0 );
#endif

		HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );

#if defined( USE_LR11XX_CRC_OVER_SPI )
    // check crc value
    uint8_t computed_crc = lr11xx_hal_compute_crc( 0xFF, data, data_length );
    if( rx_crc != computed_crc )
    {
        SMTC_HAL_TRACE_ERROR( "\x1B[0;31mERROR: lr11xx read function - error on received crc\n" );
        return LR11XX_HAL_STATUS_ERROR;
    }
#endif

    return LR11XX_HAL_STATUS_OK;
}

lr11xx_hal_status_t lr11xx_hal_reset( const void* context )
{

	const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

		HAL_GPIO_WritePin( ctx->rst_port, ctx->rst_pin, GPIO_PIN_RESET );
    HAL_Delay( 5 );
		HAL_GPIO_WritePin( ctx->rst_port, ctx->rst_pin, GPIO_PIN_SET );
    HAL_Delay( 5 );
    // Wait 200ms until internal lr11xx fw is ready
	  HAL_Delay( 200 );
    radio_mode = RADIO_AWAKE;
    return LR11XX_HAL_STATUS_OK;
}

lr11xx_hal_status_t lr11xx_hal_wakeup( const void* context )
{
    lr11xx_hal_check_device_ready( context );
    return LR11XX_HAL_STATUS_OK;
}

lr11xx_hal_status_t lr11xx_hal_abort_blocking_cmd( const void* context )
{
	  HAL_StatusTypeDef status = HAL_ERROR;
    uint8_t command[4] = { 0 };
    
    const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    // Put NSS low to start spi transaction
		HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
		
		status = HAL_SPI_Transmit( ctx->hspi, ( uint8_t* ) command, sizeof( command ), 100 );

    // Put NSS high as the spi transaction is finished
		HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );

    lr11xx_hal_wait_on_busy( context );

    return LR11XX_HAL_STATUS_OK;
}

/*
 * -----------------------------------------------------------------------------
 * --- PRIVATE FUNCTIONS DEFINITION --------------------------------------------
 */

void lr11xx_hal_wait_on_busy( const void* context )
{
	const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    while( HAL_GPIO_ReadPin( ctx->bsy_port, ctx->bsy_pin ));
}

void lr11xx_hal_check_device_ready( const void* context )
{
	const lr11xx_hal_context_t* ctx = (const lr11xx_hal_context_t*) context;

    if( radio_mode != RADIO_SLEEP )
    {
        lr11xx_hal_wait_on_busy( context );
    }
    else
    {
        // Busy is HIGH in sleep mode, wake-up the device with a small glitch on NSS
        HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_RESET );
			  HAL_Delay( 5 );
        HAL_GPIO_WritePin( ctx->nss_port, ctx->nss_pin, GPIO_PIN_SET );
        lr11xx_hal_wait_on_busy( context );
        radio_mode = RADIO_AWAKE;
    }
}

/* --- EOF ------------------------------------------------------------------ */
